@@ -32,6 +32,7 @@ PQXX_HAVE_PQDESCRIBEPORTAL	internal	libpq
 PQXX_HAVE_PQESCAPEBYTEA	internal	libpq
 PQXX_HAVE_PQESCAPEBYTEACONN	internal	libpq
 PQXX_HAVE_PQESCAPESTRING	internal	libpq
+PQXX_HAVE_PQESCAPELITERAL	internal	libpq
 PQXX_HAVE_PQESCAPESTRINGCONN	internal	libpq
 PQXX_HAVE_PQPREPARE	internal	libpq
 PQXX_HAVE_PQEXECPARAMS	internal	libpq
